--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html lang="zh">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
-</html>
+<!DOCTYPE html><html lang=zh><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=favicon.ico><title>仿探探左右滑动效果</title><link href=css/app.6ab96598.css rel=preload as=style><link href=js/app.52ae0801.js rel=preload as=script><link href=js/chunk-vendors.68c7b5ac.js rel=preload as=script><link href=css/app.6ab96598.css rel=stylesheet></head><body><noscript><strong>We're sorry but slide doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=js/chunk-vendors.68c7b5ac.js></script><script src=js/app.52ae0801.js></script></body></html>
